# zenith

./: .gitignore  .markdownlint.jsonc  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  deny.toml  zenith.toml.example
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  tag-deleted.yml  test.yml
benches/: benchmark.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  CROSS_PLATFORM_BUILDING.md  FAQ.md  README.md  RELEASE_NOTES_TEMPLATE.md  USER_GUIDE.md  USE_GUIDE.md
plugins/: markdown-lint.json  plugins.toml  prettier-js.json
scripts/: make.sh
scripts/common/: config.sh  functions.sh  version.sh
scripts/install/: install.ps1  install.sh
scripts/markdown/: __init__.py  rules.py
scripts/release/: release.sh
src/: error.rs  lib.rs  main.rs  prelude.rs
src/cli/: commands.rs  mod.rs
src/config/: cache.rs  discovery.rs  mod.rs  types.rs
src/core/: mod.rs  traits.rs  types.rs
src/mcp/: mod.rs  protocol.rs  server.rs
src/plugins/: loader.rs  mod.rs  types.rs
src/services/: batch.rs  formatter.rs  mod.rs  watch.rs
src/storage/: backup.rs  cache.rs  mod.rs
src/utils/: directory.rs  environment.rs  mod.rs  path.rs  version.rs
src/zeniths/: common.rs  mod.rs  registry.rs
src/zeniths/impls/: c_zenith.rs  ini_zenith.rs  java_zenith.rs  macros.rs  markdown_zenith.rs  mod.rs  prettier_zenith.rs  python_zenith.rs  rust_zenith.rs  shell_zenith.rs  toml_zenith.rs
tests/: lib.rs
tests/common/: assertions.rs  mocks.rs  mod.rs
tests/common/fixtures/: sample_config.toml  sample_rust.rs
tests/e2e/: mod.rs  performance.rs  workflow.rs
tests/fixtures/configs/: default.toml  maximal.toml  minimal.toml
tests/fixtures/json/: invalid.json  valid_formatted.json  valid_minified.json
tests/fixtures/python/: invalid_syntax.py  valid_complex.py
tests/fixtures/rust/: already_formatted.rs  invalid_syntax.rs  valid_complex.rs
tests/integration/: cli.rs  mcp.rs  mod.rs  platform.rs
tests/unit/: config.rs  core.rs  formatter.rs  mod.rs
(+14 files in other folders)
