# Copyright (c) 2025 Kirky.X
#
# Licensed under the MIT License
# See LICENSE file in the project root for full license information.

[package]
name = "zenith"
version = "0.1.0"
edition = "2021"
description = "A multi-language code formatter with backup capabilities"
authors = ["Zenith Team"]
license = "MIT"

[features]
default = ["full"]

full = [
    "rust",
    "python",
    "markdown",
    "java",
    "c",
    "web",
    "ini",
    "toml",
    "shell",
    "prettier",
]

rust = []
python = []
markdown = []
java = []
c = []
web = ["ini"]
ini = []
toml = []
shell = []
prettier = []

[dependencies]
# CLI & UI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
colored = "2.1"

# Async Runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web Server (MCP)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"

# Filesystem & Hashing
walkdir = "2.5"
ignore = "0.4"
tempfile = "3.10"
pathdiff = "0.2"
blake3 = { version = "1.5", features = ["pure"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.3"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "5.5"
num_cpus = "1.16"
once_cell = "1.19"

# Text Processing
regex = "1.10"

# System Info
sysinfo = { version = "0.30", default-features = false }

# Plugin System
libloading = "0.8"

# File Watching (for --watch mode)
notify = { version = "6.0" }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
async-trait = "0.1"

[profile.release]
lto = true
strip = true
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
